--- a/consignment-service/Makefile
+++ b/consignment-service/Makefile
@@ -1,3 +1,9 @@
 build:
-	protoc -I. --go_out=plugins=grpc:. \
-		proto/consignment/consignment.proto
+	protoc -I. --micro_out=. --go_out=. proto/consignment/consignment.proto
+	docker build -t consignment-service .
+
+run:
+	docker run -p 50051:50051 \
+		-e MICRO_SERVER_ADDRESS=:50051 \
+		-e MICRO_REGISTRY=mdns \
+		consignment-service
