--- a/vessel-service/Dockerfile
+++ b/vessel-service/Dockerfile
@@ -1,13 +1,12 @@
-FROM golang:alpine as builder
+FROM golang:1.10.0 as builder
 
-RUN apk --no-cache add git
-
-WORKDIR /app/vessel-service
+WORKDIR /go/src/github.com/cabotmoose/shippy/vessel-service
 
 COPY . .
 
-RUN go mod download
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o vessel-service
+RUN go get -u github.com/golang/dep/cmd/dep
+RUN dep init && dep ensure
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo .
 
 FROM alpine:latest
 
@@ -15,6 +14,6 @@ RUN apk --no-cache add ca-certificates
 
 RUN mkdir /app
 WORKDIR /app
-COPY --from=builder /app/vessel-service .
+COPY --from=builder /go/src/github.com/cabotmoose/shippy/vessel-service/vessel-service .
 
 CMD ["./vessel-service"]
