--- a/vessel-service/Makefile
+++ b/vessel-service/Makefile
@@ -1,5 +1,5 @@
 build:
-	protoc -I. --micro_out=. --go_out=. proto/vessel/vessel.proto
+	protoc -I. --go_out=plugins=micro:. proto/vessel/vessel.proto
 	docker build -t vessel-service .
 
 run:
